refactor: 清理冗余代码与废弃功能，优化代码结构
本次提交进行了多项代码清理与优化：
1.  删除了批量上传、文章发布、批量获取热度分数等废弃接口及其实现、测试用例
2.  删除了访客来源、页面访问、网站访问统计相关的DTO、服务、控制器与测试代码
3.  移除了敏感词检测与替换接口，并简化评论审核逻辑，将审核处理合并到事务方法中
4.  重构IP获取逻辑，统一封装到IpUtils工具类
5.  简化管理员删除文章逻辑，复用ArticleService现有流程
6.  精简文章统计控制器，移除非必要的读写接口
7.  简化前端统计服务接口代码
8.  清理了不再使用的Mapper方法与测试用例